--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -5,6 +5,12 @@ featsof.png: featsof-a13a45b9a30dafb5e8cff49d033ae4e9.png
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-application.js: application-449f83d7c12c506f2f804f5c9221b4e3.js
-application.css: application-bfda54fa48499d0a42972fb0ba032a49.css
+application.js: application-9c7ea0821e18b1249e493d982618034c.js
+application.css: application-55965e425626a60e21649267b0165bf2.css
 bw.jpg: bw-981d5c6ee0cc6df4ef5f7fac568e34d3.jpg
+fontawesome-webfont.eot: fontawesome-webfont-7cf1b0de49e2f8672c9ad6d9e382115f.eot
+fontawesome-webfont.svg: fontawesome-webfont-4d19fdd70a080778557b652cb4868557.svg
+fontawesome-webfont.ttf: fontawesome-webfont-1e29be0bb354c9f664cbca7df9a966d8.ttf
+fontawesome-webfont.woff: fontawesome-webfont-9c0e35b95bf9cea29c77678ebf71a29d.woff
+twitter/bootstrap/glyphicons-halflings-white.png: twitter/bootstrap/glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
+twitter/bootstrap/glyphicons-halflings.png: twitter/bootstrap/glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
