--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,18 +1,14 @@
 ---
-featmap.png: featmap-5e5fa3081f21da2db389570e2023994f.png
-featmap2.png: featmap2-0f65056b37e914329422fcae6b501e19.png
+feats_home.png: feats_home-52d172a7fd6d2a854d2708bd2c1f27d7.png
 feats_logo_large.png: feats_logo_large-79ece4463523337302c7a01fd16ccea2.png
 feats_logo_small.png: feats_logo_small-0dbe9ab52514e31be4651905836d90ca.png
-featsof.png: featsof-a13a45b9a30dafb5e8cff49d033ae4e9.png
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 application.js: application-0cdc4a7e2a1b795283aeafb88f6130eb.js
-application.css: application-a3754e9680d6acdd71af36d9de4319d3.css
+application.css: application-d4c793947c51ba003ace067f7e34841d.css
 background.jpg: background-71f677faf632019fe6149cc1536a0cc8.jpg
-bw.jpg: bw-981d5c6ee0cc6df4ef5f7fac568e34d3.jpg
-grey_bkgrnd.png: grey_bkgrnd-7a6a3232ea84bee7b1e6cf2f65a91f45.png
-greyline.png: greyline-9dc674bb7851d98382629d983ff72edb.png
+greyline.png: greyline-191857a816bddee3ab29648b8a521abe.png
 fontawesome-webfont.eot: fontawesome-webfont-7cf1b0de49e2f8672c9ad6d9e382115f.eot
 fontawesome-webfont.svg: fontawesome-webfont-4d19fdd70a080778557b652cb4868557.svg
 fontawesome-webfont.ttf: fontawesome-webfont-1e29be0bb354c9f664cbca7df9a966d8.ttf
