--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -4,14 +4,15 @@ apple-touch-icon-57-precomposed.png: apple-touch-icon-57-precomposed-1e0013e823b
 apple-touch-icon-72-precomposed.png: apple-touch-icon-72-precomposed-d8aa6abc7f787a0790f561fa9f582a92.png
 favicon.ico: favicon-60668e3031a3f299f522d1366fbf77d7.ico
 feats_home.png: feats_home-c04d423ff15692d48a75f97da7cef9d0.png
-feats_logo_large.png: feats_logo_large-79ece4463523337302c7a01fd16ccea2.png
+feats_logo_large.png: feats_logo_large-d5d0e7b471c160cf22fde3ad7d3f2d4f.png
 feats_logo_small.png: feats_logo_small-e7c288117a9058e736c06e9a8b442029.png
 glyphicons-halflings-white.png: glyphicons-halflings-white-13553a5bf21ae3cc374006592488ec64.png
 glyphicons-halflings.png: glyphicons-halflings-f6675c325532ec11a984d58e172b8e2a.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
 application.js: application-9c4636b1e8f2823bd88781f1532818d6.js
-application.css: application-e8a957e6c3594621b904afaf921ccd16.css
+application.css: application-a8051ad9a64ca08db1428e86401a2fe3.css
 background.jpg: background-71f677faf632019fe6149cc1536a0cc8.jpg
+map.jpg: map-6f0b297545c136af1108f1376a6a1a74.jpg
 fontawesome-webfont.eot: fontawesome-webfont-7cf1b0de49e2f8672c9ad6d9e382115f.eot
 fontawesome-webfont.svg: fontawesome-webfont-4d19fdd70a080778557b652cb4868557.svg
 fontawesome-webfont.ttf: fontawesome-webfont-1e29be0bb354c9f664cbca7df9a966d8.ttf
